chore: finalize full-stack dockerization and update documentation
- Dockerized the React/Vite frontend and exposed port 5173 to the host network
- Added the frontend service to docker-compose.yml for simultaneous full-stack boot
- Updated README.md to replace manual local execution steps with containerized instructions
- Documented environment-aware JMX routing (host.docker.internal vs localhost)
- Documented isolated _Query folder architecture and deterministic heap sorting
- Ensured all execution steps reflect the new containerized architecture